<resources>
    <string name="app_name">Quotes</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="button6">Button</string>
    <string name="motivation">MOTIVATION</string>
    <string name="success">SUCCESS</string>
    <string name="cars">CARS</string>
    <string name="friendship">FRIENDSHIP</string>
    <string name="love">LOVE</string>
    <string name="rich">RICH</string>

    <string name="todo61">TODO</string>
    <string name="todo62">TODO</string>
    <string name="todo63">TODO</string>
    <string name="todo64">TODO</string>
    <string name="todo65">TODO</string>
    <string name="todo66">TODO</string>
    <string name="todo67">TODO</string>
    <string name="todo68">TODO</string>
    <string name="todo69">TODO</string>
    <string name="todo70">TODO</string>
    <string name="todo71">TODO</string>
    <string name="todo72">TODO</string>
    <string name="todo73">TODO</string>
    <string name="todo74">TODO</string>
    <string name="todo75">TODO</string>
    <string name="todo76">TODO</string>
    <string name="todo77">TODO</string>
    <string name="todo78">TODO</string>
    <string name="todo79">TODO</string>
    <string name="todo80">TODO</string>
    <string name="todo91">TODO</string>
    <string name="todo92">TODO</string>
    <string name="todo93">TODO</string>
    <string name="todo94">TODO</string>
    <string name="todo95">TODO</string>
    <string name="todo96">TODO</string>
    <string name="todo97">TODO</string>
    <string name="todo98">TODO</string>
    <string name="todo99">TODO</string>
    <string name="todo100">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo24">TODO</string>
    <string name="todo25">TODO</string>
    <string name="todo26">TODO</string>
    <string name="todo27">TODO</string>
    <string name="todo28">TODO</string>
    <string name="todo29">TODO</string>
    <string name="todo30">TODO</string>


</resources>
