<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/conut"
    tools:context=".Main7Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/f1"
            android:contentDescription="@string/todo1" />

        <ImageView
            android:id="@+id/imageView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/f2"
            android:contentDescription="@string/todo2" />

        <ImageView
            android:id="@+id/imageView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/f3"
            android:contentDescription="@string/todo3" />

        <ImageView
            android:id="@+id/imageView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/f4"
            android:contentDescription="@string/todo4" />

        <ImageView
            android:id="@+id/imageView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/f5"
            android:contentDescription="@string/todo5" />

        <ImageView
            android:id="@+id/imageView36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/f6"
            android:contentDescription="@string/todo6" />

        <ImageView
            android:id="@+id/imageView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/f7"
            android:contentDescription="@string/todo7" />

        <ImageView
            android:id="@+id/imageView38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/f8"
            android:contentDescription="@string/todo8" />

        <ImageView
            android:id="@+id/imageView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/f9"
            android:contentDescription="@string/todo9" />

        <ImageView
            android:id="@+id/imageView40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/f10"
            android:contentDescription="@string/todo10" />
    </LinearLayout>
</ScrollView>