<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/conut"
    tools:context=".Main4Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/c1"
            android:contentDescription="@string/todo91" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/c2"
            android:contentDescription="@string/todo92" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/c3"
            android:contentDescription="@string/todo93" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/c4"
            android:contentDescription="@string/todo94" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/c6"
            android:contentDescription="@string/todo95" />

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/c7"
            android:contentDescription="@string/todo96" />

        <ImageView
            android:id="@+id/imageView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/c5"
            android:contentDescription="@string/todo97" />

        <ImageView
            android:id="@+id/imageView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/c8"
            android:contentDescription="@string/todo98" />

        <ImageView
            android:id="@+id/imageView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/c9"
            android:contentDescription="@string/todo99" />

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/c10"
            android:contentDescription="@string/todo100" />
    </LinearLayout>
</ScrollView>