<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/conut"
    tools:context=".Main6Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/l1"
            android:contentDescription="@string/todo11" />

        <ImageView
            android:id="@+id/imageView42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/l2"
            android:contentDescription="@string/todo12" />

        <ImageView
            android:id="@+id/imageView43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/l3"
            android:contentDescription="@string/todo13" />

        <ImageView
            android:id="@+id/imageView44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/l4"
            android:contentDescription="@string/todo14" />

        <ImageView
            android:id="@+id/imageView45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/l5"
            android:contentDescription="@string/todo15" />

        <ImageView
            android:id="@+id/imageView46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/l6"
            android:contentDescription="@string/todo16" />

        <ImageView
            android:id="@+id/imageView47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/l7"
            android:contentDescription="@string/todo17" />

        <ImageView
            android:id="@+id/imageView48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/l8"
            android:contentDescription="@string/todo18" />

        <ImageView
            android:id="@+id/imageView49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/l9"
            android:contentDescription="@string/todo19" />

        <ImageView
            android:id="@+id/imageView51"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/l10"
            android:contentDescription="@string/todo20" />


    </LinearLayout>
</ScrollView>