<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/conut"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/m1"
            android:contentDescription="@string/todo71" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/m2"
            android:contentDescription="@string/todo72" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/m3"
            android:contentDescription="@string/todo73" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/m4"
            android:contentDescription="@string/todo74" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/m5"
            android:contentDescription="@string/todo75" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/m6"
            android:contentDescription="@string/todo76" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/m7"
            android:contentDescription="@string/todo77" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/m8"
            android:contentDescription="@string/todo78" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/m9"
            android:contentDescription="@string/todo79" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/m10"
            android:contentDescription="@string/todo80" />
    </LinearLayout>
</ScrollView>




